# probabilidad

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  _tmp_check_repr.py  _tmp_inspect_cache.py  pyproject.toml
.agent/skills/sync-from-template/: SKILL.md
.binder/: Dockerfile  bashrc-venv.sh
.binder/kernels/jupyter-book-template/: kernel.json
.binder/vscode/: settings.json
.github/workflows/: build.yml  ci.yml  pages.yml
book/: bibliography.bib  myst.yml
book/chapters/: 00_how_to_use.ipynb  01_markdown.md  01_unidad1_tratamiento_datos.ipynb  01_unidad1_tratamiento_datosfvfrvt9b_nbqa_ipynb.py  02_jupyter.ipynb  02_unidad2_probabilidad.ipynb  02_unidad2_probabilidadeh9__ofg_nbqa_ipynb.py  03_unidad3_variables_aleatorias.ipynb  03_unidad3_variables_aleatoriastheukbb6_nbqa_ipynb.py  04_unidad4_va_bidimensionales_suma.ipynb  04_unidad4_va_bidimensionales_sumau19k6i0h_nbqa_ipynb.py  05_unidad5_inferencia.ipynb  05_unidad5_inferencia86jtpvc0_nbqa_ipynb.py  descriptive_statistics.ipynb  descriptive_statistics.md  descriptive_statistics_exercises.md  glossary.md  inference.ipynb  inference.md  inference_exercises.md  joint_and_sums.ipynb  joint_and_sums.md  joint_and_sums_exercises.md  pedagogy.md  pedagogy_descriptive_statistics.md  pedagogy_inference.md  pedagogy_joint_and_sums.md  pedagogy_probability.md  pedagogy_random_variables.md  probability.ipynb  probability.md  probability_exercises.md  random_variables.ipynb  random_variables.md  random_variables_exercises.md  welcome.md
book/plugins/: ethicalads-widget.mjs  ethicalads.mjs
scripts/: build_notebooks.py
src/core/: __init__.py  parameters.py  repr.py  repr_labels.py  schemas.py  settings.py  theme.py
src/descriptive/: __init__.py  categorical.py  clinic.py  dispersion.py  frequencies.py  location.py  outliers.py  position.py  summary.py
src/distributions/: __init__.py  continuous.py  discrete.py  evaluations.py
src/exercises/: __init__.py  verifiers.py
src/inference/: __init__.py  hypothesis_tests.py  mean_ci.py  proportion_ci.py  sample_size.py  variance_ci.py
src/probability/: __init__.py  bayes.py  conditional.py  set_ops.py  total_probability.py
src/sampling/: __init__.py  bootstrap.py  clt.py  galton.py  lln.py  monte_carlo.py
src/symbolic/: __init__.py  moments.py  theorems.py
src/visualization/: __init__.py  categorical.py  charts.py  distributions.py  frequency.py  inference.py  probability.py  sampling.py  summary.py  theme.py
src/widgets/: __init__.py  bayes_anywidget.py  bayes_explorer.py  clt_explorer.py  continuous_explorer.py  descriptive_explorer.py  discrete_explorer.py  lln_explorer.py  mean_ci_explorer.py  pivot_inversion_explorer.py  summary_evolution.py
tests/: conftest.py
tests/core/: repr_models.py  test_parameters.py  test_repr.py  test_schemas.py  test_settings.py  test_theme.py
tests/descriptive/: test_clinic.py  test_dispersion.py  test_frequencies.py  test_location.py  test_outliers.py  test_position.py  test_summary.py
tests/distributions/: test_continuous.py  test_discrete.py  test_evaluations.py
tests/exercises/: test_verifiers.py
tests/inference/: test_hypothesis_tests.py  test_mean_ci.py  test_proportion_ci.py  test_sample_size.py  test_variance_ci.py
tests/probability/: test_bayes.py  test_conditional.py  test_set_ops.py  test_total_probability.py
tests/sampling/: test_bootstrap.py  test_clt.py  test_galton.py  test_lln.py  test_monte_carlo.py
tests/symbolic/: test_moments.py  test_theorems.py
tests/visualization/: test_categorical.py  test_charts.py  test_distributions.py  test_frequency.py  test_inference.py  test_probability.py  test_sampling.py  test_summary.py  test_theme.py
tests/widgets/: test_bayes_anywidget.py  test_bayes_explorer.py  test_clt_explorer.py  test_continuous_explorer.py  test_descriptive_explorer.py  test_discrete_explorer.py  test_lln_explorer.py  test_mean_ci_explorer.py  test_pivot_inversion_explorer.py  test_summary_evolution.py
