[project]
name = "probabilidad"
version = "0.1.0"
description = "Probabilidad y Estadística"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "altair>=5.4",
  "anywidget>=0.9",
  "ipywidgets>=8.1",
  "jupyter-book>=2,<3",
  "jupyterlab>=4.5",
  "matplotlib>=3.10.8",
  "numpy>=2.0",
  "pandas>=3.0.1",
  "pandera[mypy]>=0.30.1",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "scipy>=1.14",
  "seaborn>=0.13.2",
  "statsmodels>=0.14",
  "sympy>=1.13",
  "vl-convert-python>=1.7",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=2.1",
  "poethepoet>=0.37",
  "prek>=0.4",
  "pylint>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.15.15",
  "wheel>=0.46.3",
]

[tool.uv.build-backend]
module-name = [
  "core",
  "symbolic",
  "distributions",
  "descriptive",
  "probability",
  "sampling",
  "inference",
  "visualization",
  "widgets",
  "exercises",
]

#########################
# Tasks
#########################

[tool.poe.tasks]
lint = "ruff check --exit-non-zero-on-fix src tests"
format = "ruff format src tests"
pylint = "pylint src tests"
mypy = "mypy src tests"
test = "pytest"
check = "prek run --all-files --verbose"

[tool.poe.tasks.build-book]
help = """
Build static HTML with executed notebooks
Related docs:
--execute: https://jupyterbook.org/stable/execution/execution/#execute-demo-content-at-build-time
--html: https://jupyterbook.org/stable/build-and-publish/publish/#custom-web-servers-and-other-static-hosts
--ci: Just a flag to indicate that this is a CI build
"""
cwd = "book"
cmd = "jupyter book build --html --execute --ci"

[tool.poe.tasks.serve-book-preview]
help = """
Preview the book locally
Related docs:
start: https://jupyterbook.org/stable/execution/execution/#start-jupyter-book
"""
cwd = "book"
cmd = "jupyter book start --port 8000"

[tool.poe.tasks.serve-book]
sequence = ["build-book", "serve-book-preview"]

[tool.poe.tasks.build-docker]
help = "Build the Binder Docker image (repo root context, .binder/Dockerfile)."
cmd = "docker build --no-cache --file .binder/Dockerfile --tag probabilidad:binder ."

[tool.poe.tasks.ci]
sequence = ["check", "test", "build-book"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-vv", "--cov", "--cov-report=term-missing", "--cov-report=xml"]

[tool.coverage.run]
branch = true
source_pkgs = [
  "core",
  "symbolic",
  "distributions",
  "descriptive",
  "probability",
  "sampling",
  "inference",
  "visualization",
  "widgets",
  "exercises",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
  "^\\s*\\.\\.\\.$",
]

#########################
# MyPy
#########################

[tool.mypy]
strict = true
follow_imports = "normal"
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
plugins = ["pandera.mypy"]
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
ignore_missing_imports = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
  "IPython.*",
  "altair.*",
  "anywidget.*",
  "ipywidgets.*",
  "matplotlib.*",
  "scipy.*",
  "seaborn.*",
  "statsmodels.*",
  "sympy.*",
  "sympy.stats.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disable_error_code = ["no-any-unimported"]

[[tool.mypy.overrides]]
module = [
  "distributions.*",
  "sampling.*",
  "inference.*",
  "symbolic.*",
  "visualization.*",
  "exercises.*",
]
disable_error_code = [
  "no-any-unimported",
  "no-any-return",
  "valid-type",
  "misc",
  "import-untyped",
  "assignment",
]

[[tool.mypy.overrides]]
module = ["widgets.*"]
disable_error_code = [
  "no-any-unimported",
  "no-any-return",
  "valid-type",
  "misc",
  "import-untyped",
  "no-untyped-call",
]

#########################
# RUFF
#########################

[tool.ruff]
fix = true
preview = true
unsafe-fixes = true
line-length = 120
extend-exclude = ["_build"]

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["D"]
"src/**/__init__.py" = []
"tests/**" = ["D", "PLR2004", "B017", "RUF069"]
"book/**/*.ipynb" = [
  "D",
  "B018",
  "INP001",
  "E402",
  "F401",
  "F811",
  "F841",
  "ERA001",
  "T201",
  "PLR2004",
  "PD901",
  "RUF002",
  "RUF003",
]
"book/**/*_nbqa_*" = ["D", "B018"]
"scripts/**" = ["D", "INP001", "ERA001", "PLR0915", "PLR2004"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "D",                   # pydocstyle (no docstrings convention)
  "CPY",                 # copyright notices
  "S101",                # assert usage
  "ISC001",              # implicit string concat
  "ANN401",              # any type
  "COM812",              # trailing comma
  "E501",                # line too long (handled by formatter)
  "ARG002",              # unused method argument
  "DOC501",              # raised exception missing from docstring
  "DOC502",              # documented exception from inner function
  "N999",                # chapter notebooks use numeric ordering prefixes
  "RUF001",              # widget descriptions use Greek letters intentionally
  "RUF069",              # explicit float comparison to 0 used as guard clauses
  "PLR0913",             # widget private helpers take many scalar slider values
  "PLR0917",             # widget private helpers take many positional values
  "INP001",              # we intentionally have non-package directories (book/, scripts/)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

#########################
# Pylint
#########################

[tool.pylint.main]
extension-pkg-allow-list = ["mypy"]

[tool.pylint.typecheck]
contextmanager-decorators = ["contextlib.contextmanager"]
ignore-none = true
ignore-on-opaque-inference = true
ignored-checks-for-mixins = [
  "no-member",
  "not-async-context-manager",
  "not-context-manager",
  "attribute-defined-outside-init",
]
ignored-classes = ["optparse.Values", "thread._local", "_thread._local"]
missing-member-hint = true
missing-member-hint-distance = 1
missing-member-max-choices = 1
mixin-class-rgx = ".*[Mm]ixin"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "invalid-name",                   # chapter notebooks use numeric ordering prefixes
  "line-too-long",                  # handled by ruff format
  "import-error",                   # already validated by mypy
  "duplicate-code",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-locals",                # notebook concat exceeds default pylint limits
  "redefined-outer-name",           # pytest fixture parameter names shadow outer fixtures
  "pointless-statement",            # notebook last-cell display (nbqa-pylint)
  "expression-not-assigned",        # notebook last-cell display (nbqa-pylint)
  "wrong-import-position",          # notebook concat treats every cell as top-level
  "wrong-import-order",             # same
  "ungrouped-imports",              # same
  "unused-import",                  # nbqa concat marks symbols re-exported between cells
  "unused-variable",                # last-cell display variables
  "unused-argument",                # widget callbacks bind unused change events
  "too-many-lines",                 # scripts/build_notebooks.py is a notebook generator
]

#########################
# Pymetrica
#########################

[tool.pymetrica]
exclude = []

#########################
# Tombi
#########################

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
trailing-comment-alignment = true

[[tool.tombi.schemas]]
path = "https://json.schemastore.org/pyproject.json"
include = ["pyproject.toml"]

[tool.tombi.schemas.format.rules.table-keys-order]
enabled = false
